# Image-Processing-Service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: celery.py  settings.py  urls.py
core/: models.py  tables.py  tasks.py  views.py
core/templates/core/: base.html  bulk_upload.html  home.html
static/css/: styles.css
