[tool.poetry]
name = "image processing service"
version = "0.1.0"
description = ""
authors = ["Сергей <sergey.vasilev.98@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
python-dotenv = "^1.1.0"
celery = "^5.5.2"
redis = "^6.1.0"
pillow = "^11.2.1"
django-crispy-forms = "^2.4"
django-tables2 = "^2.7.5"
whitenoise = "^6.9.0"
crispy-bootstrap5 = "^2025.4"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
pytest = "^8.3.5"
pytest-django = "^4.11.1"
factory-boy = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
